--- a/apendice3.tex
+++ b/apendice3.tex
@@ -1,3 +1,20 @@
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\chapter{Formatação e estilo}\label{estilo}
+PASSAR PARA APÊNDICE E CITAR AQUI?
+Algumas regras foram adotadas para maior consistência do texto.
+
+Siglas e símbolos são empregados conforme o uso mais comum na literatura pesquisada.
+Por exemplo, uma variável representada por uma letra é mnemônica a uma palavra inglesa - ou de outro idioma se for o caso do termo original.
+Os termos que introduzem um tópico não merecedor de uma seção própria aparecem em negrito.
+
+As notas de rodapé são dispensáveis para o entendimento do texto, porém elas foram adotadas nos casos a seguir para facilitar o escrutínio quando desejado.
+Quando possível, os termos em inglês foram traduzidos para o português sem perda do sentido original.
+Na primeira ocorrência de cada tradução, ela aparece escrita em itálico (quando já não estiver destacada de outra forma por outro motivo) com os seus respectivos termos originais dados em nota de rodapé.
+Termos com tradução incerta aparecem sempre em itálico, mas com uma sugestão de tradução em nota de rodapé apenas na primeira ocorrência.
+Nesse caso, as notas de rodapé são dadas em minúsculas e entre colchetes.
+Expressões sublinhadas indicam a existência de maiores detalhes em notas de rodapé.
+%
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
