--- a/apendice5.tex
+++ b/apendice5.tex
@@ -1,8 +1,23 @@
 \chapter{Revisão sistemática}\label{revsist}
+
 \ano{a revisão sist. não chegou a lugar algum, não compensaria dedicar um capítulo inteiro a
 ela; porém no final de tudo, com a tese quase pronta, posso readequá-la e incluí-la}
 
-\blue{Revisão bibliográfica sistemática é um procedimento de identificação,
+
+\ano{tema: active learning
+problema: há várias estratégias, como escolher uma delas?
+protocolo de revisão:
+        background: framework teórico; problemática e objetivo
+        questões de pesquisa:
+        estratégia de busca: palavras-chave, sinônimos e relacionadas
+        critérios: tipo de estudo, de inclusão e exclusão
+        seleção: etapas, plano
+        avaliação da qualidade: critérios
+        extração de dados: como, o quê
+        calendário: }
+
+
+        \blue{Revisão bibliográfica sistemática é um procedimento de identificação,
 avaliação e interpretação de toda pesquisa relevante disponível a respeito
 de uma particular questão ou assunto de interesse \citep{Kitchenham2007}.
 O intento original da revisão sistemática era suportar a medicina baseada em evidência.
