--- a/introducao.tex
+++ b/introducao.tex
@@ -10,39 +10,38 @@
 \input{aprendizado-supervisionado}
 
 
+\esb{apresenta o custo de rotulação como motivação;
+explicita que ninguém compara estratégias; comenta possiveis deficiencias ou
+lacunas das estrategias existentes, apresenta melhorias propostas; apresenta
+recomendação de classificador e/ou estratégia; apresenta hipóteses principal e secundárias.
+Falar ainda dos objetivos da tese, que estao bem ligados as hipoteses}
 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
+\ano{lembretes antigos talvez redundantes:}
+
+\ano{citar problemas? fadiga ...}
+
+\tar{ esboçar a tese em uma folha (desafios e soluções)}
+
+\tar{em outra página, vou deixar clara a principal contribuição:}
+
+\tar{provavelmente a meta-estratégia ou}
+
+\tar{a prova empírica da viabilidade do AA, coisa nunca provada com
+a devida análise de risco e com robustez estatística}
+
+\tar{as contribuições secundárias vão ser mencionadas e suas existências devem ser sempre
+justificadas em função da contribuição principal}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
 
+\ano{referenciar apendice de Formatação e estilo}
+Apêndice \ref{estilo}
 
-% 
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% % \section{Considerações espistemológicas}
-% % MANTER ISSO?
-% % Tendo em vista o panorama atual de fragmentação da ciência e a discussão contemporânea a respeito da necessidade de um novo direcionamento rumo à complexidade \citep{morin1984ciencia}, busca-se neste trabalho explicitar os vínculos com relação às aplicações e inspirações de conceitos provenientes de outras áreas.
-% % Trata-se de uma tentativa de compreensão mais ampla dos assuntos relacionados ao objeto de estudo.
-% % Porém, é preciso restringir o alcance do texto, ao menos na monografia de qualificação devido ao limite de escopo normalmente esperado desse tipo de trabalho.
-% % Pretende-se futuramente, dentro das limitações de tempo e recursos, avaliar as possibilidades, por exemplo, de simbiose com o aprendizado humano \citep{denning2011exploring}.
-% 
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \section{Formatação e estilo}
-% PASSAR PARA APÊNDICE E CITAR AQUI?
-% Algumas regras foram adotadas para maior consistência do texto.
-% 
-% Siglas e símbolos são empregados conforme o uso mais comum na literatura pesquisada.
-% Por exemplo, uma variável representada por uma letra é mnemônica a uma palavra inglesa - ou de outro idioma se for o caso do termo original.
-% Os termos que introduzem um tópico não merecedor de uma seção própria aparecem em negrito.
-% 
-% As notas de rodapé são dispensáveis para o entendimento do texto, porém elas foram adotadas nos casos a seguir para facilitar o escrutínio quando desejado.
-% Quando possível, os termos em inglês foram traduzidos para o português sem perda do sentido original.
-% Na primeira ocorrência de cada tradução, ela aparece escrita em itálico (quando já não estiver destacada de outra forma por outro motivo) com os seus respectivos termos originais dados em nota de rodapé.
-% Termos com tradução incerta aparecem sempre em itálico, mas com uma sugestão de tradução em nota de rodapé apenas na primeira ocorrência.
-% Nesse caso, as notas de rodapé são dadas em minúsculas e entre colchetes.
-% Expressões sublinhadas indicam a existência de maiores detalhes em notas de rodapé.
-% 
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % % \newpage
 % \section{Capítulos}
 % Este documento está organizado maneira descrita a seguir.
@@ -56,19 +55,6 @@
 % O plano de trabalho é apresentado no Capítulo \ref{cap:plano} e contempla a situação atual do aluno no programa de doutorado, os recursos disponíveis, as hipóteses formuladas, a metodologia e o cronograma.
 % 
 % Finalmente, no Capítulo \ref{cap:experimentos}, são mostrados experimentos ilustrativos da mudança de conceito e da diversidade de comportamento entre diferentes classificadores.
-
-\ano{tema: active learning
-problema: há várias estratégias, como escolher uma delas?
-protocolo de revisão:
-        background: framework teórico; problemática e objetivo
-        questões de pesquisa:
-        estratégia de busca: palavras-chave, sinônimos e relacionadas
-        critérios: tipo de estudo, de inclusão e exclusão
-        seleção: etapas, plano
-        avaliação da qualidade: critérios
-        extração de dados: como, o quê
-        calendário: }
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -120,3 +106,6 @@ $TU$ utilidade de treinamento
 $Inf(\bm{x})$ medida de informatividade
 $d(\bm{x},\bm{u})$ medida de distância
 $sim(\bm{x},\bm{u})$ medida de similaridade
+
+\red{explicar que vai ser adotada uma notação uniforme que compreenda AL, ELM
+ e ap. inc.}
