--- a/dataset-tables.tex
+++ b/dataset-tables.tex
@@ -3,39 +3,39 @@
 \caption{Características das bases de dados (1-33).}
 \begin{center}
 \begin{tabular}{l|r r r r r r}
- & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 1-abalone 3class & 3342 & 3 & 8 & 1 & 35 & 32\\
-2-arcene & 160 & 2 & 998 & 0 & 56 & 44\\
-3-artificial charact... & 3890 & 10 & 7 & 0 & 14 & 6\\\hline
-4-autoUniv au1 1000 & 798 & 2 & 20 & 0 & 74 & 26\\
-5-autoUniv au7 300 d... & 880 & 5 & 12 & 4 & 28 & 14\\
-6-autoUniv au7 700 & 560 & 3 & 12 & 4 & 35 & 31\\\hline
-7-balance scale & 500 & 3 & 4 & 0 & 46 & 8\\
-8-banana & 4233 & 2 & 2 & 0 & 55 & 45\\
-9-banknote authentic... & 1078 & 2 & 4 & 0 & 55 & 45\\\hline
-10-bupa & 273 & 2 & 6 & 0 & 58 & 42\\
-11-car evaluation & 1382 & 4 & 6 & 6 & 70 & 4\\
-12-cardiotocography 1... & 1692 & 10 & 35 & 0 & 27 & 2\\\hline
-13-cardiotocography 3... & 1692 & 3 & 35 & 0 & 78 & 8\\
-14-climate simulation... & 432 & 2 & 20 & 0 & 91 & 9\\
-15-connect. mines vs... & 166 & 2 & 60 & 0 & 53 & 47\\\hline
-16-connect. vowel red... & 422 & 11 & 10 & 0 & 9 & 9\\
-17-connect. vowel... & 792 & 11 & 13 & 0 & 9 & 9\\
-18-dbworld subjects & 50 & 2 & 242 & 242 & 56 & 44\\\hline
-19-first order theore... & 4402 & 6 & 51 & 0 & 42 & 8\\
-20-flare & 337 & 6 & 12 & 2 & 31 & 8\\
-21-glass & 170 & 6 & 9 & 0 & 36 & 4\\\hline
-22-habermans survival & 226 & 2 & 3 & 0 & 72 & 28\\
-23-heart disease clev... & 242 & 5 & 13 & 2 & 54 & 4\\
-24-heart disease hung... & 234 & 2 & 13 & 0 & 64 & 36\\\hline
-25-hepatitis & 124 & 2 & 19 & 13 & 79 & 21\\
-26-hill valley withou... & 970 & 2 & 100 & 0 & 50 & 50\\
-27-horse colic surgic... & 240 & 2 & 27 & 14 & 64 & 36\\\hline
-28-indian liver patie... & 456 & 2 & 10 & 1 & 71 & 29\\
-29-ionosphere & 280 & 2 & 33 & 0 & 64 & 36\\
-30-iris & 118 & 3 & 4 & 0 & 34 & 33\\\hline
-31-kr vs kp & 2557 & 2 & 36 & 36 & 52 & 48\\
-32-leaf & 272 & 30 & 15 & 0 & 5 & 2\\
-33-leukemia haslinger & 80 & 2 & 50 & 0 & 51 & 49\\\hline\end{tabular}
+ & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 1-abalone 3class & 3342 & 3 & 8 & 1 &  34.6 &  31.7\\
+2-arcene & 160 & 2 & 998 & 0 &  56.0 &  44.0\\
+3-artificial charact... & 3890 & 10 & 7 & 0 &  14.4 &   6.0\\\hline
+4-autoUniv au1 1000 & 798 & 2 & 20 & 0 &  74.1 &  25.9\\
+5-autoUniv au7 300 d... & 880 & 5 & 12 & 4 &  27.7 &  13.9\\
+6-autoUniv au7 700 & 560 & 3 & 12 & 4 &  35.0 &  30.6\\\hline
+7-balance scale & 500 & 3 & 4 & 0 &  46.1 &   7.8\\
+8-banana & 4233 & 2 & 2 & 0 &  55.2 &  44.8\\
+9-banknote authentic... & 1078 & 2 & 4 & 0 &  54.7 &  45.3\\\hline
+10-bupa & 273 & 2 & 6 & 0 &  58.4 &  41.6\\
+11-car evaluation & 1382 & 4 & 6 & 6 &  70.0 &   3.8\\
+12-cardiotocography 1... & 1692 & 10 & 35 & 0 &  27.2 &   2.4\\\hline
+13-cardiotocography 3... & 1692 & 3 & 35 & 0 &  77.9 &   8.3\\
+14-climate simulation... & 432 & 2 & 20 & 0 &  91.5 &   8.5\\
+15-connect. mines vs... & 166 & 2 & 60 & 0 &  53.4 &  46.6\\\hline
+16-connect. vowel red... & 422 & 11 & 10 & 0 &   9.1 &   9.1\\
+17-connect. vowel... & 792 & 11 & 13 & 0 &   9.1 &   9.1\\
+18-dbworld subjects & 50 & 2 & 242 & 242 &  55.6 &  44.4\\\hline
+19-first order theore... & 4402 & 6 & 51 & 0 &  42.2 &   8.0\\
+20-flare & 337 & 6 & 12 & 2 &  31.4 &   7.6\\
+21-glass & 170 & 6 & 9 & 0 &  35.7 &   4.2\\\hline
+22-habermans survival & 226 & 2 & 3 & 0 &  72.1 &  27.9\\
+23-heart disease clev... & 242 & 5 & 13 & 2 &  54.1 &   4.3\\
+24-heart disease hung... & 234 & 2 & 13 & 0 &  63.8 &  36.2\\\hline
+25-hepatitis & 124 & 2 & 19 & 13 &  79.4 &  20.6\\
+26-hill valley withou... & 970 & 2 & 100 & 0 &  50.5 &  49.5\\
+27-horse colic surgic... & 240 & 2 & 27 & 14 &  63.7 &  36.3\\\hline
+28-indian liver patie... & 456 & 2 & 10 & 1 &  71.2 &  28.8\\
+29-ionosphere & 280 & 2 & 33 & 0 &  64.3 &  35.7\\
+30-iris & 118 & 3 & 4 & 0 &  34.0 &  32.7\\\hline
+31-kr vs kp & 2557 & 2 & 36 & 36 &  52.2 &  47.8\\
+32-leaf & 272 & 30 & 15 & 0 &   4.7 &   2.4\\
+33-leukemia haslinger & 80 & 2 & 50 & 0 &  51.0 &  49.0\\\hline\end{tabular}
 \label{tab:datasetsa}
 \end{center}
 \end{table}
@@ -43,39 +43,39 @@
 \caption{Características das bases de dados (34-66).}
 \begin{center}
 \begin{tabular}{l|r r r r r r}
- & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 34-mammographic mass & 514 & 2 & 5 & 0 & 52 & 48\\
-35-mfeat fourier & 1595 & 10 & 76 & 0 & 10 & 10\\
-36-molecular promotor... & 85 & 2 & 57 & 57 & 50 & 50\\\hline
-37-molecular splice j... & 2404 & 3 & 60 & 60 & 55 & 22\\
-38-monks1 & 346 & 2 & 6 & 0 & 50 & 50\\
-39-monks2 & 346 & 2 & 6 & 6 & 67 & 33\\\hline
-40-monks3 & 346 & 2 & 6 & 0 & 53 & 47\\
-41-movement libras & 264 & 15 & 90 & 0 & 7 & 6\\
-42-movement libras 10 & 192 & 15 & 90 & 0 & 8 & 6\\\hline
-43-mushroom & 6499 & 2 & 21 & 21 & 52 & 48\\
-44-ozone eighthr & 2021 & 2 & 72 & 0 & 94 & 6\\
-45-ozone onehr & 2022 & 2 & 72 & 0 & 97 & 3\\\hline
-46-page blocks & 4314 & 5 & 10 & 0 & 91 & 1\\
-47-parkinsons & 156 & 2 & 22 & 0 & 75 & 25\\
-48-phoneme & 4316 & 2 & 5 & 0 & 71 & 29\\\hline
-49-pima indians diabe... & 614 & 2 & 8 & 0 & 65 & 35\\
-50-planning relax & 141 & 2 & 12 & 0 & 72 & 28\\
-51-qsar biodegradatio... & 842 & 2 & 41 & 0 & 66 & 34\\\hline
-52-ringnorm & 5920 & 2 & 20 & 0 & 50 & 50\\
-53-robot failure lp1 & 70 & 4 & 90 & 0 & 39 & 18\\
-54-robot failure lp4 & 93 & 3 & 90 & 0 & 61 & 18\\\hline
-55-robot failure lp5 & 130 & 5 & 90 & 0 & 28 & 13\\
-56-robot nav sensor r... & 4142 & 4 & 2 & 0 & 42 & 6\\
-57-saheart & 370 & 2 & 9 & 1 & 65 & 35\\\hline
-58-seeds & 168 & 3 & 7 & 0 & 33 & 33\\
-59-semeion & 1274 & 10 & 256 & 0 & 10 & 10\\
-60-spambase & 3366 & 2 & 57 & 0 & 60 & 40\\\hline
-61-spect heart & 178 & 2 & 22 & 22 & 56 & 44\\
-62-spectf heart & 214 & 2 & 44 & 0 & 79 & 21\\
-63-statlog australian... & 552 & 2 & 14 & 6 & 56 & 44\\\hline
-64-statlog german cre... & 800 & 2 & 24 & 0 & 70 & 30\\
-65-statlog heart & 216 & 2 & 13 & 0 & 56 & 44\\
-66-statlog image segm... & 1669 & 7 & 18 & 0 & 14 & 14\\\hline\end{tabular}
+ & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 34-mammographic mass & 514 & 2 & 5 & 0 &  52.5 &  47.5\\
+35-mfeat fourier & 1595 & 10 & 76 & 0 &  10.0 &   9.9\\
+36-molecular promotor... & 85 & 2 & 57 & 57 &  50.0 &  50.0\\\hline
+37-molecular splice j... & 2404 & 3 & 60 & 60 &  55.0 &  22.4\\
+38-monks1 & 346 & 2 & 6 & 0 &  50.0 &  50.0\\
+39-monks2 & 346 & 2 & 6 & 6 &  67.1 &  32.9\\\hline
+40-monks3 & 346 & 2 & 6 & 0 &  53.0 &  47.0\\
+41-movement libras & 264 & 15 & 90 & 0 &   7.3 &   6.4\\
+42-movement libras 10 & 192 & 15 & 90 & 0 &   7.5 &   6.3\\\hline
+43-mushroom & 6499 & 2 & 21 & 21 &  51.8 &  48.2\\
+44-ozone eighthr & 2021 & 2 & 72 & 0 &  93.7 &   6.3\\
+45-ozone onehr & 2022 & 2 & 72 & 0 &  97.1 &   2.9\\\hline
+46-page blocks & 4314 & 5 & 10 & 0 &  90.5 &   0.5\\
+47-parkinsons & 156 & 2 & 22 & 0 &  75.4 &  24.6\\
+48-phoneme & 4316 & 2 & 5 & 0 &  70.8 &  29.2\\\hline
+49-pima indians diabe... & 614 & 2 & 8 & 0 &  65.1 &  34.9\\
+50-planning relax & 141 & 2 & 12 & 0 &  71.6 &  28.4\\
+51-qsar biodegradatio... & 842 & 2 & 41 & 0 &  66.3 &  33.7\\\hline
+52-ringnorm & 5920 & 2 & 20 & 0 &  50.5 &  49.5\\
+53-robot failure lp1 & 70 & 4 & 90 & 0 &  38.6 &  18.2\\
+54-robot failure lp4 & 93 & 3 & 90 & 0 &  61.2 &  18.1\\\hline
+55-robot failure lp5 & 130 & 5 & 90 & 0 &  27.8 &  13.0\\
+56-robot nav sensor r... & 4142 & 4 & 2 & 0 &  42.0 &   6.3\\
+57-saheart & 370 & 2 & 9 & 1 &  65.4 &  34.6\\\hline
+58-seeds & 168 & 3 & 7 & 0 &  33.3 &  33.3\\
+59-semeion & 1274 & 10 & 256 & 0 &  10.2 &   9.7\\
+60-spambase & 3366 & 2 & 57 & 0 &  60.1 &  39.9\\\hline
+61-spect heart & 178 & 2 & 22 & 22 &  55.9 &  44.1\\
+62-spectf heart & 214 & 2 & 44 & 0 &  79.4 &  20.6\\
+63-statlog australian... & 552 & 2 & 14 & 6 &  55.5 &  44.5\\\hline
+64-statlog german cre... & 800 & 2 & 24 & 0 &  70.0 &  30.0\\
+65-statlog heart & 216 & 2 & 13 & 0 &  55.6 &  44.4\\
+66-statlog image segm... & 1669 & 7 & 18 & 0 &  14.4 &  14.0\\\hline\end{tabular}
 \label{tab:datasetsb}
 \end{center}
 \end{table}
@@ -83,34 +83,34 @@
 \caption{Características das bases de dados (67-94).}
 \begin{center}
 \begin{tabular}{l|r r r r r r}
- & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 67-statlog landsat sa... & 2287 & 6 & 36 & 0 & 30 & 10\\
-68-statlog vehicle si... & 677 & 4 & 18 & 0 & 26 & 24\\
-69-steel plates fault... & 1553 & 2 & 33 & 0 & 65 & 35\\\hline
-70-systhetic control & 480 & 6 & 60 & 0 & 17 & 17\\
-71-teaching assistant... & 85 & 3 & 5 & 2 & 36 & 32\\
-72-thyroid ann & 2967 & 3 & 21 & 0 & 92 & 3\\\hline
-73-thyroid hypothyroi... & 2468 & 2 & 25 & 18 & 95 & 5\\
-74-thyroid newthyroid & 172 & 3 & 5 & 0 & 70 & 14\\
-75-thyroid sick & 2201 & 5 & 26 & 20 & 58 & 1\\\hline
-76-thyroid sick euthy... & 2468 & 2 & 25 & 18 & 91 & 9\\
-77-tic tac toe & 766 & 2 & 9 & 9 & 65 & 35\\
-78-turkiye student & 2667 & 13 & 32 & 0 & 14 & 1\\\hline
-79-twonorm & 5920 & 2 & 20 & 0 & 50 & 50\\
-80-user knowledge & 322 & 5 & 5 & 0 & 32 & 6\\
-81-vertebra column 2c & 248 & 2 & 6 & 0 & 68 & 32\\\hline
-82-vertebra column 3c & 248 & 3 & 6 & 0 & 48 & 19\\
-83-volcanoes a3 & 1217 & 5 & 3 & 0 & 90 & 2\\
-84-volcanoes b2 & 8530 & 5 & 3 & 0 & 96 & 0\\\hline
-85-volcanoes d1 & 7002 & 5 & 3 & 0 & 94 & 1\\
-86-volcanoes e2 & 863 & 5 & 3 & 0 & 91 & 1\\
-87-voting & 223 & 2 & 16 & 16 & 67 & 33\\\hline
-88-waveform v2 & 4000 & 3 & 40 & 0 & 34 & 33\\
-89-wdbc & 455 & 2 & 30 & 0 & 63 & 37\\
-90-wholesale channel & 352 & 2 & 7 & 0 & 68 & 32\\\hline
-91-wilt & 3855 & 2 & 5 & 0 & 95 & 5\\
-92-wine & 142 & 3 & 13 & 0 & 40 & 27\\
-93-wine quality white... & 3149 & 5 & 11 & 0 & 45 & 3\\\hline
-94-yeast 4class & 1015 & 4 & 8 & 0 & 35 & 13\\\end{tabular}
+ & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 67-statlog landsat sa... & 2287 & 6 & 36 & 0 &  30.5 &   9.6\\
+68-statlog vehicle si... & 677 & 4 & 18 & 0 &  25.8 &  23.5\\
+69-steel plates fault... & 1553 & 2 & 33 & 0 &  65.3 &  34.7\\\hline
+70-systhetic control & 480 & 6 & 60 & 0 &  16.7 &  16.7\\
+71-teaching assistant... & 85 & 3 & 5 & 2 &  35.8 &  32.1\\
+72-thyroid ann & 2967 & 3 & 21 & 0 &  92.3 &   2.5\\\hline
+73-thyroid hypothyroi... & 2468 & 2 & 25 & 18 &  95.5 &   4.5\\
+74-thyroid newthyroid & 172 & 3 & 5 & 0 &  69.8 &  14.0\\
+75-thyroid sick & 2201 & 5 & 26 & 20 &  57.5 &   1.1\\\hline
+76-thyroid sick euthy... & 2468 & 2 & 25 & 18 &  90.9 &   9.1\\
+77-tic tac toe & 766 & 2 & 9 & 9 &  65.3 &  34.7\\
+78-turkiye student & 2667 & 13 & 32 & 0 &  13.6 &   0.5\\\hline
+79-twonorm & 5920 & 2 & 20 & 0 &  50.0 &  50.0\\
+80-user knowledge & 322 & 5 & 5 & 0 &  32.0 &   6.0\\
+81-vertebra column 2c & 248 & 2 & 6 & 0 &  67.7 &  32.3\\\hline
+82-vertebra column 3c & 248 & 3 & 6 & 0 &  48.4 &  19.4\\
+83-volcanoes a3 & 1217 & 5 & 3 & 0 &  90.0 &   1.9\\
+84-volcanoes b2 & 8530 & 5 & 3 & 0 &  96.5 &   0.2\\\hline
+85-volcanoes d1 & 7002 & 5 & 3 & 0 &  94.4 &   0.6\\
+86-volcanoes e2 & 863 & 5 & 3 & 0 &  91.2 &   0.7\\
+87-voting & 223 & 2 & 16 & 16 &  67.0 &  33.0\\\hline
+88-waveform v2 & 4000 & 3 & 40 & 0 &  33.8 &  33.1\\
+89-wdbc & 455 & 2 & 30 & 0 &  62.7 &  37.3\\
+90-wholesale channel & 352 & 2 & 7 & 0 &  67.7 &  32.3\\\hline
+91-wilt & 3855 & 2 & 5 & 0 &  94.7 &   5.3\\
+92-wine & 142 & 3 & 13 & 0 &  39.9 &  27.0\\
+93-wine quality white... & 3149 & 5 & 11 & 0 &  45.4 &   3.3\\\hline
+94-yeast 4class & 1015 & 4 & 8 & 0 &  34.5 &  12.8\\\end{tabular}
 \label{tab:datasetsc}
 \end{center}
 \end{table}
@@ -118,31 +118,32 @@
 \caption{Bases de dados mais desbalanceadas.}
 \begin{center}
 \begin{tabular}{l|r r r r r r}
- & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 84-volcanoes b2 & 8530 & 5 & 3 & 0 & 96 & 0\\
-85-volcanoes d1 & 7002 & 5 & 3 & 0 & 94 & 1\\
-86-volcanoes e2 & 863 & 5 & 3 & 0 & 91 & 1\\\hline
-46-page blocks & 4314 & 5 & 10 & 0 & 91 & 1\\
-75-thyroid sick & 2201 & 5 & 26 & 20 & 58 & 1\\
-83-volcanoes a3 & 1217 & 5 & 3 & 0 & 90 & 2\\\hline
-45-ozone onehr & 2022 & 2 & 72 & 0 & 97 & 3\\
-72-thyroid ann & 2967 & 3 & 21 & 0 & 92 & 3\\
-91-wilt & 3855 & 2 & 5 & 0 & 95 & 5\\\hline
-73-thyroid hypothyroi... & 2468 & 2 & 25 & 18 & 95 & 5\\
-11-car evaluation & 1382 & 4 & 6 & 6 & 70 & 4\\
-44-ozone eighthr & 2021 & 2 & 72 & 0 & 94 & 6\\\hline
-93-wine quality white... & 3149 & 5 & 11 & 0 & 45 & 3\\
-78-turkiye student & 2667 & 13 & 32 & 0 & 14 & 1\\
-23-heart disease clev... & 242 & 5 & 13 & 2 & 54 & 4\\\hline
-12-cardiotocography 1... & 1692 & 10 & 35 & 0 & 27 & 2\\
-76-thyroid sick euthy... & 2468 & 2 & 25 & 18 & 91 & 9\\
-14-climate simulation... & 432 & 2 & 20 & 0 & 91 & 9\\\hline
-13-cardiotocography 3... & 1692 & 3 & 35 & 0 & 78 & 8\\
-21-glass & 170 & 6 & 9 & 0 & 36 & 4\\
-56-robot nav sensor r... & 4142 & 4 & 2 & 0 & 42 & 6\\\hline
-7-balance scale & 500 & 3 & 4 & 0 & 46 & 8\\
-80-user knowledge & 322 & 5 & 5 & 0 & 32 & 6\\
-19-first order theore... & 4402 & 6 & 51 & 0 & 42 & 8\\\hline
-74-thyroid newthyroid & 172 & 3 & 5 & 0 & 70 & 14\\\end{tabular}
+ & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 84-volcanoes b2 & 8530 & 5 & 3 & 0 &  96.5 &   0.2\\
+46-page blocks & 4314 & 5 & 10 & 0 &  90.5 &   0.5\\
+85-volcanoes d1 & 7002 & 5 & 3 & 0 &  94.4 &   0.6\\\hline
+86-volcanoes e2 & 863 & 5 & 3 & 0 &  91.2 &   0.7\\
+75-thyroid sick & 2201 & 5 & 26 & 20 &  57.5 &   1.1\\
+83-volcanoes a3 & 1217 & 5 & 3 & 0 &  90.0 &   1.9\\\hline
+72-thyroid ann & 2967 & 3 & 21 & 0 &  92.3 &   2.5\\
+45-ozone onehr & 2022 & 2 & 72 & 0 &  97.1 &   2.9\\
+78-turkiye student & 2667 & 13 & 32 & 0 &  13.6 &   0.5\\\hline
+73-thyroid hypothyroi... & 2468 & 2 & 25 & 18 &  95.5 &   4.5\\
+11-car evaluation & 1382 & 4 & 6 & 6 &  70.0 &   3.8\\
+91-wilt & 3855 & 2 & 5 & 0 &  94.7 &   5.3\\\hline
+44-ozone eighthr & 2021 & 2 & 72 & 0 &  93.7 &   6.3\\
+93-wine quality white... & 3149 & 5 & 11 & 0 &  45.4 &   3.3\\
+23-heart disease clev... & 242 & 5 & 13 & 2 &  54.1 &   4.3\\\hline
+12-cardiotocography 1... & 1692 & 10 & 35 & 0 &  27.2 &   2.4\\
+14-climate simulation... & 432 & 2 & 20 & 0 &  91.5 &   8.5\\
+76-thyroid sick euthy... & 2468 & 2 & 25 & 18 &  90.9 &   9.1\\\hline
+13-cardiotocography 3... & 1692 & 3 & 35 & 0 &  77.9 &   8.3\\
+21-glass & 170 & 6 & 9 & 0 &  35.7 &   4.2\\
+56-robot nav sensor r... & 4142 & 4 & 2 & 0 &  42.0 &   6.3\\\hline
+7-balance scale & 500 & 3 & 4 & 0 &  46.1 &   7.8\\
+80-user knowledge & 322 & 5 & 5 & 0 &  32.0 &   6.0\\
+19-first order theore... & 4402 & 6 & 51 & 0 &  42.2 &   8.0\\\hline
+74-thyroid newthyroid & 172 & 3 & 5 & 0 &  69.8 &  14.0\\
+20-flare & 337 & 6 & 12 & 2 &  31.4 &   7.6\\\end{tabular}
 \label{tab:imb}
 \end{center}
 \end{table}
@@ -150,24 +151,24 @@
 \caption{Bases de dados com mais atributos.}
 \begin{center}
 \begin{tabular}{l|r r r r r r}
- & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 2-arcene & 160 & 2 & 998 & 0 & 56 & 44\\
-59-semeion & 1274 & 10 & 256 & 0 & 10 & 10\\
-18-dbworld subjects & 50 & 2 & 242 & 242 & 56 & 44\\\hline
-26-hill valley withou... & 970 & 2 & 100 & 0 & 50 & 50\\
-55-robot failure lp5 & 130 & 5 & 90 & 0 & 28 & 13\\
-54-robot failure lp4 & 93 & 3 & 90 & 0 & 61 & 18\\\hline
-53-robot failure lp1 & 70 & 4 & 90 & 0 & 39 & 18\\
-42-movement libras 10 & 192 & 15 & 90 & 0 & 8 & 6\\
-41-movement libras & 264 & 15 & 90 & 0 & 7 & 6\\\hline
-35-mfeat fourier & 1595 & 10 & 76 & 0 & 10 & 10\\
-45-ozone onehr & 2022 & 2 & 72 & 0 & 97 & 3\\
-44-ozone eighthr & 2021 & 2 & 72 & 0 & 94 & 6\\\hline
-70-systhetic control & 480 & 6 & 60 & 0 & 17 & 17\\
-37-molecular splice j... & 2404 & 3 & 60 & 60 & 55 & 22\\
-15-connect. mines vs... & 166 & 2 & 60 & 0 & 53 & 47\\\hline
-60-spambase & 3366 & 2 & 57 & 0 & 60 & 40\\
-36-molecular promotor... & 85 & 2 & 57 & 57 & 50 & 50\\
-19-first order theore... & 4402 & 6 & 51 & 0 & 42 & 8\\\hline\end{tabular}
+ & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 2-arcene & 160 & 2 & 998 & 0 &  56.0 &  44.0\\
+59-semeion & 1274 & 10 & 256 & 0 &  10.2 &   9.7\\
+18-dbworld subjects & 50 & 2 & 242 & 242 &  55.6 &  44.4\\\hline
+26-hill valley withou... & 970 & 2 & 100 & 0 &  50.5 &  49.5\\
+55-robot failure lp5 & 130 & 5 & 90 & 0 &  27.8 &  13.0\\
+54-robot failure lp4 & 93 & 3 & 90 & 0 &  61.2 &  18.1\\\hline
+53-robot failure lp1 & 70 & 4 & 90 & 0 &  38.6 &  18.2\\
+42-movement libras 10 & 192 & 15 & 90 & 0 &   7.5 &   6.3\\
+41-movement libras & 264 & 15 & 90 & 0 &   7.3 &   6.4\\\hline
+35-mfeat fourier & 1595 & 10 & 76 & 0 &  10.0 &   9.9\\
+45-ozone onehr & 2022 & 2 & 72 & 0 &  97.1 &   2.9\\
+44-ozone eighthr & 2021 & 2 & 72 & 0 &  93.7 &   6.3\\\hline
+70-systhetic control & 480 & 6 & 60 & 0 &  16.7 &  16.7\\
+37-molecular splice j... & 2404 & 3 & 60 & 60 &  55.0 &  22.4\\
+15-connect. mines vs... & 166 & 2 & 60 & 0 &  53.4 &  46.6\\\hline
+60-spambase & 3366 & 2 & 57 & 0 &  60.1 &  39.9\\
+36-molecular promotor... & 85 & 2 & 57 & 57 &  50.0 &  50.0\\
+19-first order theore... & 4402 & 6 & 51 & 0 &  42.2 &   8.0\\\hline\end{tabular}
 \label{tab:x}
 \end{center}
 \end{table}
@@ -175,22 +176,22 @@
 \caption{Bases de dados com mais classes.}
 \begin{center}
 \begin{tabular}{l|r r r r r r}
- & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 32-leaf & 272 & 30 & 15 & 0 & 5 & 2\\
-42-movement libras 10 & 192 & 15 & 90 & 0 & 8 & 6\\
-41-movement libras & 264 & 15 & 90 & 0 & 7 & 6\\\hline
-78-turkiye student & 2667 & 13 & 32 & 0 & 14 & 1\\
-17-connect. vowel... & 792 & 11 & 13 & 0 & 9 & 9\\
-16-connect. vowel red... & 422 & 11 & 10 & 0 & 9 & 9\\\hline
-59-semeion & 1274 & 10 & 256 & 0 & 10 & 10\\
-35-mfeat fourier & 1595 & 10 & 76 & 0 & 10 & 10\\
-12-cardiotocography 1... & 1692 & 10 & 35 & 0 & 27 & 2\\\hline
-3-artificial charact... & 3890 & 10 & 7 & 0 & 14 & 6\\
-66-statlog image segm... & 1669 & 7 & 18 & 0 & 14 & 14\\
-70-systhetic control & 480 & 6 & 60 & 0 & 17 & 17\\\hline
-67-statlog landsat sa... & 2287 & 6 & 36 & 0 & 30 & 10\\
-21-glass & 170 & 6 & 9 & 0 & 36 & 4\\
-20-flare & 337 & 6 & 12 & 2 & 31 & 8\\\hline
-19-first order theore... & 4402 & 6 & 51 & 0 & 42 & 8\\\end{tabular}
+ & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 32-leaf & 272 & 30 & 15 & 0 &   4.7 &   2.4\\
+42-movement libras 10 & 192 & 15 & 90 & 0 &   7.5 &   6.3\\
+41-movement libras & 264 & 15 & 90 & 0 &   7.3 &   6.4\\\hline
+78-turkiye student & 2667 & 13 & 32 & 0 &  13.6 &   0.5\\
+17-connect. vowel... & 792 & 11 & 13 & 0 &   9.1 &   9.1\\
+16-connect. vowel red... & 422 & 11 & 10 & 0 &   9.1 &   9.1\\\hline
+59-semeion & 1274 & 10 & 256 & 0 &  10.2 &   9.7\\
+35-mfeat fourier & 1595 & 10 & 76 & 0 &  10.0 &   9.9\\
+12-cardiotocography 1... & 1692 & 10 & 35 & 0 &  27.2 &   2.4\\\hline
+3-artificial charact... & 3890 & 10 & 7 & 0 &  14.4 &   6.0\\
+66-statlog image segm... & 1669 & 7 & 18 & 0 &  14.4 &  14.0\\
+70-systhetic control & 480 & 6 & 60 & 0 &  16.7 &  16.7\\\hline
+67-statlog landsat sa... & 2287 & 6 & 36 & 0 &  30.5 &   9.6\\
+21-glass & 170 & 6 & 9 & 0 &  35.7 &   4.2\\
+20-flare & 337 & 6 & 12 & 2 &  31.4 &   7.6\\\hline
+19-first order theore... & 4402 & 6 & 51 & 0 &  42.2 &   8.0\\\end{tabular}
 \label{tab:y}
 \end{center}
 \end{table}
@@ -198,42 +199,42 @@
 \caption{Bases de dados com mais exemplos.}
 \begin{center}
 \begin{tabular}{l|r r r r r r}
- & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 84-volcanoes b2 & 8530 & 5 & 3 & 0 & 96 & 0\\
-85-volcanoes d1 & 7002 & 5 & 3 & 0 & 94 & 1\\
-43-mushroom & 6499 & 2 & 21 & 21 & 52 & 48\\\hline
-79-twonorm & 5920 & 2 & 20 & 0 & 50 & 50\\
-52-ringnorm & 5920 & 2 & 20 & 0 & 50 & 50\\
-19-first order theore... & 4402 & 6 & 51 & 0 & 42 & 8\\\hline
-48-phoneme & 4316 & 2 & 5 & 0 & 71 & 29\\
-46-page blocks & 4314 & 5 & 10 & 0 & 91 & 1\\
-8-banana & 4233 & 2 & 2 & 0 & 55 & 45\\\hline
-56-robot nav sensor r... & 4142 & 4 & 2 & 0 & 42 & 6\\
-88-waveform v2 & 4000 & 3 & 40 & 0 & 34 & 33\\
-3-artificial charact... & 3890 & 10 & 7 & 0 & 14 & 6\\\hline
-91-wilt & 3855 & 2 & 5 & 0 & 95 & 5\\
-60-spambase & 3366 & 2 & 57 & 0 & 60 & 40\\
-1-abalone 3class & 3342 & 3 & 8 & 1 & 35 & 32\\\hline
-93-wine quality white... & 3149 & 5 & 11 & 0 & 45 & 3\\
-72-thyroid ann & 2967 & 3 & 21 & 0 & 92 & 3\\
-78-turkiye student & 2667 & 13 & 32 & 0 & 14 & 1\\\hline
-31-kr vs kp & 2557 & 2 & 36 & 36 & 52 & 48\\
-76-thyroid sick euthy... & 2468 & 2 & 25 & 18 & 91 & 9\\
-73-thyroid hypothyroi... & 2468 & 2 & 25 & 18 & 95 & 5\\\hline
-37-molecular splice j... & 2404 & 3 & 60 & 60 & 55 & 22\\
-67-statlog landsat sa... & 2287 & 6 & 36 & 0 & 30 & 10\\
-75-thyroid sick & 2201 & 5 & 26 & 20 & 58 & 1\\\hline
-45-ozone onehr & 2022 & 2 & 72 & 0 & 97 & 3\\
-44-ozone eighthr & 2021 & 2 & 72 & 0 & 94 & 6\\
-13-cardiotocography 3... & 1692 & 3 & 35 & 0 & 78 & 8\\\hline
-12-cardiotocography 1... & 1692 & 10 & 35 & 0 & 27 & 2\\
-66-statlog image segm... & 1669 & 7 & 18 & 0 & 14 & 14\\
-35-mfeat fourier & 1595 & 10 & 76 & 0 & 10 & 10\\\hline
-69-steel plates fault... & 1553 & 2 & 33 & 0 & 65 & 35\\
-11-car evaluation & 1382 & 4 & 6 & 6 & 70 & 4\\
-59-semeion & 1274 & 10 & 256 & 0 & 10 & 10\\\hline
-83-volcanoes a3 & 1217 & 5 & 3 & 0 & 90 & 2\\
-9-banknote authentic... & 1078 & 2 & 4 & 0 & 55 & 45\\
-94-yeast 4class & 1015 & 4 & 8 & 0 & 35 & 13\\\hline\end{tabular}
+ & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 84-volcanoes b2 & 8530 & 5 & 3 & 0 &  96.5 &   0.2\\
+85-volcanoes d1 & 7002 & 5 & 3 & 0 &  94.4 &   0.6\\
+43-mushroom & 6499 & 2 & 21 & 21 &  51.8 &  48.2\\\hline
+79-twonorm & 5920 & 2 & 20 & 0 &  50.0 &  50.0\\
+52-ringnorm & 5920 & 2 & 20 & 0 &  50.5 &  49.5\\
+19-first order theore... & 4402 & 6 & 51 & 0 &  42.2 &   8.0\\\hline
+48-phoneme & 4316 & 2 & 5 & 0 &  70.8 &  29.2\\
+46-page blocks & 4314 & 5 & 10 & 0 &  90.5 &   0.5\\
+8-banana & 4233 & 2 & 2 & 0 &  55.2 &  44.8\\\hline
+56-robot nav sensor r... & 4142 & 4 & 2 & 0 &  42.0 &   6.3\\
+88-waveform v2 & 4000 & 3 & 40 & 0 &  33.8 &  33.1\\
+3-artificial charact... & 3890 & 10 & 7 & 0 &  14.4 &   6.0\\\hline
+91-wilt & 3855 & 2 & 5 & 0 &  94.7 &   5.3\\
+60-spambase & 3366 & 2 & 57 & 0 &  60.1 &  39.9\\
+1-abalone 3class & 3342 & 3 & 8 & 1 &  34.6 &  31.7\\\hline
+93-wine quality white... & 3149 & 5 & 11 & 0 &  45.4 &   3.3\\
+72-thyroid ann & 2967 & 3 & 21 & 0 &  92.3 &   2.5\\
+78-turkiye student & 2667 & 13 & 32 & 0 &  13.6 &   0.5\\\hline
+31-kr vs kp & 2557 & 2 & 36 & 36 &  52.2 &  47.8\\
+76-thyroid sick euthy... & 2468 & 2 & 25 & 18 &  90.9 &   9.1\\
+73-thyroid hypothyroi... & 2468 & 2 & 25 & 18 &  95.5 &   4.5\\\hline
+37-molecular splice j... & 2404 & 3 & 60 & 60 &  55.0 &  22.4\\
+67-statlog landsat sa... & 2287 & 6 & 36 & 0 &  30.5 &   9.6\\
+75-thyroid sick & 2201 & 5 & 26 & 20 &  57.5 &   1.1\\\hline
+45-ozone onehr & 2022 & 2 & 72 & 0 &  97.1 &   2.9\\
+44-ozone eighthr & 2021 & 2 & 72 & 0 &  93.7 &   6.3\\
+13-cardiotocography 3... & 1692 & 3 & 35 & 0 &  77.9 &   8.3\\\hline
+12-cardiotocography 1... & 1692 & 10 & 35 & 0 &  27.2 &   2.4\\
+66-statlog image segm... & 1669 & 7 & 18 & 0 &  14.4 &  14.0\\
+35-mfeat fourier & 1595 & 10 & 76 & 0 &  10.0 &   9.9\\\hline
+69-steel plates fault... & 1553 & 2 & 33 & 0 &  65.3 &  34.7\\
+11-car evaluation & 1382 & 4 & 6 & 6 &  70.0 &   3.8\\
+59-semeion & 1274 & 10 & 256 & 0 &  10.2 &   9.7\\\hline
+83-volcanoes a3 & 1217 & 5 & 3 & 0 &  90.0 &   1.9\\
+9-banknote authentic... & 1078 & 2 & 4 & 0 &  54.7 &  45.3\\
+94-yeast 4class & 1015 & 4 & 8 & 0 &  34.5 &  12.8\\\hline\end{tabular}
 \label{tab:n}
 \end{center}
 \end{table}
